fixed sizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -297,7 +297,6 @@ footer ul li{
     }
     main{
         margin-top: 100px;
-        margin-left: 10%;
         width: 80%;
     }
     main p{
