--- a/src/my-ui/dropdown.css
+++ b/src/my-ui/dropdown.css
@@ -2,8 +2,7 @@
     width: 33%;
     position: relative;
     display: inline-block;
-    text-align: center;
-    margin-right: 5%;;
+    text-align: left;
 }
 
 .dropdown .trigger{
@@ -44,7 +43,7 @@
 .dropdown .content{
     display: none;
     position: absolute;
-    top: 23px;
+    top: 22px;
     left: 50%;
     width: 100%;
     transform: translateX(-50%);
